# wine

./: .gitignore  AI_STATUS.md  BOOT_TO_DESKTOP_PIPELINE_REPORT.md  BOOT_TO_DESKTOP_REPORT.md  GERCEK_DURUM_RAPORU.md  INTEGRATION_PLAN.md  MULTI_ARCH_IMPLEMENTATION_REPORT.md  OZKAN_OS_GAP_ANALYSIS_REPORT.md  Prompt.txt  SECURITY_REPORT.md  et --soft HEAD~1  rules.md
compat/: Cargo.toml  android.rs  compat_manager.rs  core_services.rs  darwin.rs  darwin_frameworks.rs  dos_emulator.rs  java_bytecode.rs  linux_elf.rs  ozkan_compat.rs  wasm_runtime.rs  win32.rs  win_layer.rs  wine_server.rs  wine_server_registry.rs
compat/win32/: app_manager.rs  gdi.rs  kernel_objects.rs  pe_loader.rs  pe_resources.rs  process_mgr.rs  registry.rs  syscall_emu.rs  win32_base_types.rs  win32_handle_table.rs  win32_mod.rs  win32_process_types.rs  win32_virtual_memory.rs
compat/win32/dlls/rust/user32_core/: Cargo.toml  user32_root.rs
compat/win32/dlls/rust/user32_core/src/: clipboard.rs  dialog.rs  hook.rs  input_kbd.rs  input_mouse.rs  menu.rs  monitor.rs  resources.rs  system_param.rs  wnd_class.rs  wnd_create.rs  wnd_message.rs  wnd_paint.rs  wnd_prop.rs
compat/win32/syscall_emu/: api_emulator.rs  pe_helpers.rs  (+4 more)
compat/win_layer/: api_emulator.rs  atom_core.rs  clipboard_core.rs  console_core.rs  gdi_core.rs  heap_core.rs  kernel_object.rs  mailslot_core.rs  native_base.rs  pe_engine.rs  pipe_core.rs  registry_engine.rs  scm_core.rs  seh_core.rs  shared_defs.rs  subclass_core.rs  sync_core.rs  syscall_core.rs  system_env.rs  timer_core.rs  tmp_api.txt  tmp_pe.txt  window_core.rs
(+36 files in other folders)
